# RobotCA

./: .gitignore  README.md  index.html  params.json  privacypolicy.htm
src/android_foo/: .gitignore  CMakeLists.txt  build.gradle  local.properties  package.xml  settings.gradle
src/android_foo/control_app/: .gitignore  build.gradle  local.properties
src/android_foo/control_app/gradle/wrapper/: gradle-wrapper.properties
src/android_foo/control_app/libs/: osmbonuspack_v5.8.1.aar
src/android_foo/control_app/src/androidTest/: AndroidManifest.xml
src/android_foo/control_app/src/main/: AndroidManifest.xml
src/android_foo/control_app/src/main/res/anim/: slide_in_top.xml  slide_out_bottom.xml
src/android_foo/control_app/src/main/res/drawable/: background_splash.xml
src/android_foo/control_app/src/main/res/layout/: actionbar_dropdown_menu.xml  dialog_add_robot.xml  fragment_about.xml  fragment_camera_view.xml  fragment_help.xml  fragment_hud.xml  fragment_joystick_view.xml  fragment_laser_scan.xml  fragment_map.xml  fragment_overview.xml  laser_scan_view.xml  main.xml  nav_drawer_menu_item.xml  pageone_fragment.xml  pagethree_fragment.xml  robot_chooser.xml  (+2 more)
src/android_foo/control_app/src/main/res/layout-land/: fragment_overview.xml  main.xml
src/android_foo/control_app/src/main/res/layout-large/: fragment_hud.xml
src/android_foo/control_app/src/main/res/layout-normal/: fragment_hud.xml
src/android_foo/control_app_lib/: build.gradle
src/android_foo/control_app_lib/src/main/: AndroidManifest.xml
src/android_foo/gradle/wrapper/: gradle-wrapper.properties
(+107 files in other folders)
